Disabled scrollbars in fullscreen mode. Chart size is now calculated correctly in fullscreen mode. Removed second chart size calculation round since it is not needed anymore.

--- a/src/main/webapp/layout.css
+++ b/src/main/webapp/layout.css
@@ -43,7 +43,12 @@ html, body {
 	width: 100%;
 	height: 100%;
 	display: none;
+	overflow: hidden;
 	background-color: white;
+}
+
+#fullscreenControls, #fullscreenContent {
+	overflow: hidden;
 }
 
 #fullscreenLogo {
